--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "homepage": "https://Alexey779.github.io/",
+  "homepage": "https://Alexey779.github.io/my-portfolio",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "deploy": "gh-pages -d dist" 
   },
   "keywords": [],
   "author": "",
